--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
     <section id="home" class="d-flex align-items-center justify-content-center text-center">
         <div class="hero-content">
-            <img src="./images/Designer.png" alt="Profile Image" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 20px; border: solid; border-width: 3px; border-color: black;">
+            <img src="./images/Designer.png" alt="Profile Image" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 20px; margin-top: 20px; border: solid; border-width: 3px; border-color: black;">
             <h1 style="color: black; font-weight: bolder;">Hi, I'm Alex Johnson</h1>
             <p style="color: black;">Engineering Student Specializing in Robotics, Renewable Energy, and Software Development</p>
             <a href="#projects" class="btn btn-primary">View My Work</a>
